--- a/0120_einsmedia/scss/_mixin.scss
+++ b/0120_einsmedia/scss/_mixin.scss
@@ -17,6 +17,37 @@
     background:url($url + $img) no-repeat center center/$size;
 }
 
+
+@function unitCheck($x) {  
+    // 단위체크
+    @if(type-of($x)==number) {
+        @if(unitless($x)) {
+            @return $x+px;
+        } 
+    } 
+    @return $x;
+}
+
+@mixin border($r) { 
+    $r:unitCheck($r);
+    -ms-border-radius:$r;
+    -webkit-border-radius:$r;
+    border-radius: $r; 
+}
+
+
+@mixin modal($w, $h, $bg) {
+    $w: unitCheck($w);
+    $h: unitCheck($h); 
+    width: $w;
+    height: $h;
+    background-color: $bg;
+    position: fixed;
+    left: 50%; top: 50%; 
+    transform:translate(-50%, -50%);
+    box-shadow:0 0 10px rgba(#000,0.8);
+}
+
 // #{변수}
 
 $w : 300px;
