--- a/0120_einsmedia/scss/common.scss
+++ b/0120_einsmedia/scss/common.scss
@@ -95,7 +95,36 @@ body {
             }
         }
     }
+    
+    .btnClose {
+        position:fixed;
+        right:20px;top:20px;
+        color:#222;
+        z-index:102;
+        font-size:50px;
+        display:none;
+ 
+    }
 } 
+
+.pageHeader.full { 
+    .gnb {
+        color:#222;
+        position:fixed;
+        left:0;top:0;
+        width:100vw;
+        height:100vh;
+        background-color:#fff;
+        z-index:100;
+
+        @include flex($a:center, $j:center);
+        
+        .list {
+            display:block;
+
+        }
+    }
+}
 
 
 %areaHeader {
@@ -197,7 +226,30 @@ body {
             @extend %areaHeader;
         }
     }
-} 
+}  
 
+.dimm {
+    position:fixed;
+    left:0;top:0;
+    width:100vw;
+    height:100vh;
+    background-color:rgba(#000,0.7);
+    z-index:100;
+    display:none;
+}
+ 
+.modal { 
+    z-index:101;
+    @include border(20);  
+    @include modal(50%,400,#fff); 
+    display:none; 
+}
 
-
+.modal2 {
+    z-index:101;
+    @include modal(100vw,60vh,#fff);
+    bottom:-70vh;
+    top:auto;
+    left:0;
+    transform:translate(0,0);
+}
