--- a/0120_einsmedia/scss/common.scss
+++ b/0120_einsmedia/scss/common.scss
@@ -1,10 +1,10 @@
 @charset "utf-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Noto+Sans+KR:wght@100;300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Noto+Sans+KR:wght@100;300;400;700&display=swap");
 
-$url : '../images/';
-$main : #e60012;
-$gray : #333, #666, #999, #d8d8d8, #f5f6f7;
+$url: "../images/";
+$main: #e60012;
+$gray: #333, #666, #999, #d8d8d8, #f5f6f7;
 
 /*
 a {
@@ -13,243 +13,248 @@ a {
 }
 */
 
-@import 'reset','mixin';
+@import "reset", "mixin";
 
 body {
-    font-family:'Montserrat','Noto Sans KR', sans-serif;
-} 
+	font-family: "Montserrat", "Noto Sans KR", sans-serif;
+}
 
 %base {
-    width:100%;
-    max-width:1350px;
-    padding:0 25px;
-    margin:0 auto; 
+	width: 100%;
+	max-width: 1350px;
+	padding: 0 25px;
+	margin: 0 auto;
 }
 
-.pageHeader { 
-    z-index:99;
-    @include flex($a:center);
-    padding:0 25px;
-    position:fixed;
-    left:0;right:0;top:0;
+.pageHeader {
+	z-index: 99;
+	@include flex($a: center);
+	padding: 0 25px;
+	position: fixed;
+	left: 0;
+	right: 0;
+	top: 0;
 
-    h1 {
-        width:142px;
-        a {
-            height:60px;
-            display:block; 
-            @include bg('mainLogo.png',$size:contain); 
-        }
-    }
+	h1 {
+		width: 142px;
+		a {
+			height: 60px;
+			display: block;
+			@include bg("mainLogo.png", $size: contain);
+		}
+	}
 
-    .gnb { 
-        @include flex;  
-        color:#fff;
-    }
-    
-    .list { 
-        @include flex;
-        li {
-            margin-right:1.5em;
-        }
-    }
- 
-    .btnHam { 
-        width:40px;
-        height:24px;
+	.gnb {
+		@include flex;
+		color: #fff;
+	}
 
-        &:hover {
-            b {
-                width:100%;
-            }
-        }
+	.list {
+		@include flex;
+		li {
+			margin-right: 1.5em;
+		}
+	}
 
-        span {
-            display:block;
-            height:2px;
-            background-color:#fff;
-            position:relative;
+	.btnHam {
+		width: 40px;
+		height: 24px;
 
-            &:nth-of-type(2) {
-                margin:5px 0;
-                b {
-                    background-color:mediumaquamarine;
-                    transition-delay:0.2s;
-                }
-            }
+		&:hover {
+			b {
+				width: 100%;
+			}
+		}
 
-            &:last-child {
-                b {
-                    background-color:lighten($main,30%);
-                    transition-delay:0.4s;
-                }
-            }
+		span {
+			display: block;
+			height: 2px;
+			background-color: #fff;
+			position: relative;
 
-            b {
-                position:absolute;
-                left:0;top:0;
-                width:0;
-                height:100%;
-                background-color:$main;
-                transition:0.4s;
-            }
-        }
-    }
-    
-    .btnClose {
-        position:fixed;
-        right:20px;top:20px;
-        color:#222;
-        z-index:102;
-        font-size:50px;
-        display:none;
- 
-    }
-} 
+			&:nth-of-type(2) {
+				margin: 5px 0;
+				b {
+					background-color: mediumaquamarine;
+					transition-delay: 0.2s;
+				}
+			}
 
-.pageHeader.full { 
-    .gnb {
-        color:#222;
-        position:fixed;
-        left:0;top:0;
-        width:100vw;
-        height:100vh;
-        background-color:#fff;
-        z-index:100;
+			&:last-child {
+				b {
+					background-color: lighten($main, 30%);
+					transition-delay: 0.4s;
+				}
+			}
 
-        @include flex($a:center, $j:center);
-        
-        .list {
-            display:block;
+			b {
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 0;
+				height: 100%;
+				background-color: $main;
+				transition: 0.4s;
+			}
+		}
+	}
 
-        }
-    }
+	.btnClose {
+		position: fixed;
+		right: 20px;
+		top: 20px;
+		color: #222;
+		z-index: 102;
+		font-size: 50px;
+		display: none;
+	}
 }
 
+.pageHeader.full {
+	.gnb {
+		color: #222;
+		position: fixed;
+		left: 0;
+		top: 0;
+		width: 100vw;
+		height: 100vh;
+		background-color: #fff;
+		z-index: 100;
+
+		@include flex($a: center, $j: center);
+
+		.list {
+			display: block;
+		}
+	}
+}
 
 %areaHeader {
-    display:flex;
-    margin-bottom:3em;
+	display: flex;
+	margin-bottom: 3em;
+	letter-spacing: -0.7px;
 
-    h2 {
-        font-size:39px;
-        font-weight:600;
-        width:50%; 
-        &:after {
-            content:'';
-            display:inline-block;
-            width:7px;height:7px;
-            border-radius:50%;
-            background-color:$main; 
-        }
-    }
+	h2 {
+		font-size: 39px;
+		font-weight: 600;
+		width: 50%;
+		line-height: 1.2;
+		&:after {
+			content: "";
+			display: inline-block;
+			width: 7px;
+			height: 7px;
+			border-radius: 50%;
+			background-color: $main;
+		}
+	}
 
-    p {
-        font-size:17px; 
-        position:relative; 
-        padding-left:100px;
-        &:before {
-            content:'';
-            position:absolute;
-            left:0;
-            top:10px;
-            height:3px;
-            background-color:#222;
-            width:70px;
-        }
-    }
+	p {
+		font-size: 17px;
+		position: relative;
+		padding-left: 100px;
+		&:before {
+			content: "";
+			position: absolute;
+			left: 0;
+			top: 10px;
+			height: 3px;
+			background-color: #222;
+			width: 70px;
+		}
+	}
 }
-
 
 // 섹션 공통 영역
 .area {
-    height:100vh; 
-    position:relative;
-    @include flex($a:center,$j:center); 
+	height: 100vh;
+	position: relative;
+	@include flex($a: center, $j: center);
 
-    .inner {
-        @extend %base; 
-        @include line(gold);
-    }
+	.inner {
+		@extend %base;
+		@include line(gold);
+	}
 
-    .cont {
-        @include line; 
-    }
+	.cont {
+		@include line;
+	}
 
-    &.visual { 
-        @include bg('mainBG_01.jpg'); 
-        color:#fff;
+	&.visual {
+		@include bg("mainBG_01.jpg");
+		color: #fff;
 
-        h2 {
-            font-weight:700;
-            font-size:80px;
-            line-height:1;
-            margin:0 0 20px;
-        }
+		h2 {
+			font-weight: 700;
+			font-size: 80px;
+			line-height: 1;
+			margin: 0 0 20px;
+		}
 
-        p {
-            font-size:18px;
-        }
+		p {
+			font-size: 18px;
+		}
 
-        .sns {
-            position:absolute;
-            left:50px;
-            bottom:50px;
+		.sns {
+			position: absolute;
+			left: 50px;
+			bottom: 50px;
 
-            @include flex;
-            li:nth-child(2) {
-                margin:0 15px;
-            }
-        }
-    }
+			@include flex;
+			li:nth-child(2) {
+				margin: 0 15px;
+			}
+		}
+	}
 
-    &.solution {
-        header {
-            @extend %areaHeader;
-        }
-    }
+	&.solution {
+		header {
+			@extend %areaHeader;
+		}
+	}
 
-    &.marketing {
-        color:#fff;
-        header {
-            @extend %areaHeader; 
-            p:before {
-                background-color:#fff;
-            }
-        }
-        @include bg('business_04.jpg');
-    } 
+	&.marketing {
+		color: #fff;
+		header {
+			@extend %areaHeader;
+			p:before {
+				background-color: #fff;
+			}
+		}
+		@include bg("business_04.jpg");
+	}
 
-    &.d {
-        @include bg('bg_msec03.jpg');
-        header {
-            @extend %areaHeader;
-        }
-    }
-}  
+	&.d {
+		@include bg("bg_msec03.jpg");
+		header {
+			@extend %areaHeader;
+		}
+	}
+}
 
 .dimm {
-    position:fixed;
-    left:0;top:0;
-    width:100vw;
-    height:100vh;
-    background-color:rgba(#000,0.7);
-    z-index:100;
-    display:none;
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(#000, 0.7);
+	z-index: 100;
+	display: none;
 }
- 
-.modal { 
-    z-index:101;
-    @include border(20);  
-    @include modal(50%,400,#fff); 
-    display:none; 
+
+.modal {
+	z-index: 101;
+	@include border(20);
+	@include modal(50%, 400, #fff);
+	display: none;
 }
 
 .modal2 {
-    z-index:101;
-    @include modal(100vw,60vh,#fff);
-    bottom:-70vh;
-    top:auto;
-    left:0;
-    transform:translate(0,0);
+	z-index: 101;
+	@include modal(100vw, 60vh, #fff);
+	bottom: -70vh;
+	top: auto;
+	left: 0;
+	transform: translate(0, 0);
 }
